--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,22 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+pg_dumps/
+*/log/
+*/data/
+test_src/
+yus/assets/yus.yml
+oddb.org/etc/oddb.yml
+yus/etc/yus.yml
+yus/etc/yus.key
+yus/etc/yus.crt
+data/
+logs/
+downloads/
+*.zip
+*gz
+
+#Allow
+!bin
+!bin/*
